2005-09-06  Saurabh Verma  <saurabh.verma@codito.com>

PR target/8973
        * config/arc/arc.c (arc_output_function_epilogue): Update flags while
        returning from an interrupt handler.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@103972 138bc75d-0d04-0410-961f-82ee72b054a4